@@ -1,5 +1,7 @@
 === HEAD
 
+* Make column_select plugin not raise an exception if the model's table does not exist (jeremyevans)
+
 * Make dataset_associations plugin correctly handle (many|one)_through_many associations with single join table (jeremyevans) (#1253)
 
 * Add s extension, with adds Sequel::S module that includes private #S method for calling Sequel.expr, including use as refinement (jeremyevans)
